# DroneRush

./: .gitignore  .preset.ini.kate-swp  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
[build-dir]/: CMakeCache.txt  Makefile  cmake_install.cmake
inc/: app.h  camera.h  cell.h  event_handler.h  frame_timer.h  game_object.h  game_scene.h  geometry.h  grid.h  input.h  input_handler.h  main.h  scene.h  scene_manager.h  window_manager.h
src/: app.cpp  camera.cpp  cell.cpp  event_handler.cpp  frame_timer.cpp  game_object.cpp  game_scene.cpp  geometry.cpp  grid.cpp  input.cpp  input_handler.cpp  main.cpp  scene.cpp  scene_manager.cpp  window_manager.cpp
test/: tests.cpp
